# django-deplot

./: .gitignore  .notes.md  Dockerfile  gunicorn.conf.py  main.py  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: django.yml
boot/: docker-run.sh
src/cfehome/: settings.py  urls.py  views.py
src/commando/management/commands/: auto_admin.py
src/staticfiles/: custom.css
src/staticfiles/app/: custom.css
src/templates/: hello-world.html
