[project]
name = "django-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django==5.2.1",
    "django-redis>=5.4.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "whitenoise[brotli]>=6.9.0",
]
